--- a/client/src/components/Messages/Message.css
+++ b/client/src/components/Messages/Message.css
@@ -40,15 +40,16 @@
     border-radius: 3px;
     background-color: var(--navyblue);
     color: white;
+    border-radius: 10px 10px 10px 0px;
 }
 
 .msg.own {
     padding: 0.7em;
     margin: 0.5em 1em;
     max-width: 60%;
-    border-radius: 3px;
     background-color: var(--kinda-white);
     color: var(--navyblue);
+    border-radius: 10px 10px 0px 10px;
 }
 
 .msgInput {
