--- a/client/src/components/Login/Login.css
+++ b/client/src/components/Login/Login.css
@@ -117,3 +117,15 @@
     margin-top: 1em;
     gap: 5px;
 }
+
+#passEye {
+    margin-left: -40px;
+    max-width: 20px;
+    max-height: 20px;
+}
+
+#passEyeSlash {
+    margin-left: -40px;
+    max-width: 20px;
+    max-height: 20px;
+}
