--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -164,13 +164,14 @@
 .post-content-upper {
     display: flex;
     width: 100%;
+    padding: 0.5em 0;
     justify-content: space-between;
 }
 
 #input-description {
     border-radius: 5px;
-    padding: 0.3em;
-    height: 50%;
+    padding: 0.5em;
+    height: 60%;
     resize: none;
 }
 
@@ -188,6 +189,7 @@
     font-family: sans-serif;
     font-size: 15px;
     text-transform: uppercase;
+    padding-left: 1px;
 }
 
 .pet-description {
@@ -197,6 +199,7 @@
     text-align: justify;
     text-justify: inter-word;
     overflow-y: scroll;
+    line-height: 1.3em;
 }
 
 .post-delete-button,
@@ -230,13 +233,15 @@
 }
 
 .post-buttons {
+    display: flex;
     justify-content: center;
-    align-items: flex-end;
+    align-items: flex-start;
 }
 
 .post-title>input {
     width: 100%;
-    padding: 0.3em;
+    padding: 0.3em 10px;
+    border-radius: 5px;
 }
 
 .post-title>input:focus {
@@ -248,48 +253,23 @@
     height: 25px;
 }
 
-#post-edit-icon{
+#post-edit-icon,
+#post-delete-icon,
+#post-save-icon,
+#post-cancel-icon {
     cursor: pointer;
-    font-size: 25px;
-    margin-right: 10px;
-    margin-top:5px;
+    font-size: 18px;
+    /* margin-right: 10px;
+    margin-top: 5px; */
     padding: 10px;
     border-radius: 10%;
     transition: all 0.4s ease;
 }
 
-#post-delete-icon{
-    cursor: pointer;
-    font-size: 25px;
-    margin-right: 10px;
-    margin-top:5px;
-    padding: 10px;
-    border-radius: 10%;
-    transition: all 0.4s ease;
-}
-
-#post-save-icon{
-    cursor: pointer;
-    font-size: 25px;
-    margin-right: 10px;
-    margin-top:5px;
-    padding: 10px;
-    border-radius: 10%;
-    transition: all 0.4s ease;
-}
-
-#post-cancel-icon{
-    cursor: pointer;
-    font-size: 25px;
-    margin-right: 10px;
-    margin-top:5px;
-    padding: 10px;
-    border-radius: 10%;
-    transition: all 0.4s ease;
-}
-
-#post-edit-icon:hover, #post-delete-icon:hover, 
-#post-save-icon:hover, #post-cancel-icon:hover{
-    transform: scale(1.2); 
+#post-edit-icon:hover,
+#post-delete-icon:hover,
+#post-save-icon:hover,
+#post-cancel-icon:hover {
+    /* transform: scale(1.2);  */
     background-color: rgb(207, 207, 207);
-} 
+}
