--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -49,7 +49,7 @@
     color: var(--navyblue);
 }
 
-.confirm-row {
+.confirm-row, .modal-confirm-row {
     display: flex;
     width: 100%;
     justify-content: space-between;
@@ -65,14 +65,14 @@
 .navModal {
     transition: all 0.4s ease-in-out;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: var(--kinda-grey);
+    background-color: rgb(242, 242, 242);
     z-index: 1000;
     padding: 3em;
     gap: 1em;
@@ -87,4 +87,55 @@
     right: 0;
     background-color: rgba(0, 0, 0, 0.7);
     z-index: 1000;
+}
+
+.signout-close-icon{
+    cursor: pointer;
+    font-size: 20px;
+    margin-top: 5px;
+    margin-right: 5px;
+    padding-right: 12px;
+    padding-left: 12px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 10%;
+    transition: all 0.4s ease;
+    display: block;
+    float: right;  
+    z-index: 3;
+    position: absolute; 
+    right: 0px; 
+    top: 0px;
+    color: var(--navyblue);
+}
+
+.signout-close-icon:hover {
+    /* transform: scale(1.2);  */
+    background-color: rgb(207, 207, 207);
+} 
+
+.modal-signout-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0em 2em 0em 2em;
+    height: 100%;
+    font-size: 13px;
+    text-transform: uppercase;
+    letter-spacing: 0.9px;
+    font-weight: 550;
+    border-radius: 4px;
+    transition: all 0.2s ease 0s;
+    cursor: pointer;
+    outline: none;
+    text-decoration: none;
+    border-width: 3px;
+    border-color: var(--navyblue);
+    background-color: var(--kinda-white);
+    color: var(--navyblue);
+}
+
+.modal-signout-button:hover {
+    color: white;
+    background: var(--navyblue);
 }
