--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -275,3 +275,45 @@
     /* transform: scale(1.2);  */
     background-color: var(--hover-background);
 }
+
+.post-title>input {
+    width: 95%;
+    padding: 0.3em 10px;
+    border-radius: 5px;
+}
+
+.post-pet-species{
+    width: 46% !important;
+    padding: 0.3em 10px;
+    border-radius: 5px;
+}
+
+.post-pet-color{
+    width: 46% !important;
+    padding: 0.3em 10px;
+    border-radius: 5px;
+}
+
+.post-pet-species:focus, .post-pet-color:focus {
+    outline: none;
+}
+
+.post-pet-species {
+    font-family: sans-serif;
+    font-size: 15px;
+    text-transform: uppercase;
+    padding-left: 1px;
+}
+
+.post-pet-color {
+    font-family: sans-serif;
+    font-size: 15px;
+    text-transform: uppercase;
+    padding-left: 1px;
+    margin-left: 2%;
+}
+
+.post-pet-species-and-color{
+    display: flex;
+    flex-direction: row;
+}
