--- a/client/src/components/Modal/Modal.css
+++ b/client/src/components/Modal/Modal.css
@@ -1,56 +1,60 @@
-.modal{
+.modal {
     position: fixed;
-	top: 50%;
-	left: 50%;
-	width: 70%;
-	height: 75%;
-	transform: translate(-50%, -50%);
-	background-color: #FFF;
-	padding: 18px;
-	z-index: 1000;
+    top: 50%;
+    left: 50%;
+    width: 75%;
+    height: 75%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 18px;
+    z-index: 1000;
     border-radius: 15px;
+    /* transition: all 0.5s ease-in-out; */
 }
 
-.modalContainer{
+.modalContainer {
     width: 100%;
-	height: 100%;
-	display: flex;
-	flex-direction: row;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
 }
 
 .photoContainer {
-	width: 50%;
-	height: 100%;
-	overflow: hidden;
-	display: flex;
-	justify-content: center;
-	box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
-    border-radius: 15px;
-    background: rgb(24, 24, 24);
-};
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1em;
+    /* background: rgb(24, 24, 24); */
+}
 
-.photo{
-    flex: 1;
+.photoContainer>img {
+    max-width: 100%;
+    max-height: 100%;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+    border-radius: 15px;
 }
 
 .modalDescription {
-	margin: 0 auto;
-	width: 40%;
+    margin: 0 auto;
+    width: 40%;
     margin-top: 40px;
 }
 
 .modalIcons {
     display: block;
-   float: right;  
-   z-index: 3;
-   position: absolute; 
-   right: 5px; 
-   top: 5px;
+    float: right;
+    z-index: 3;
+    position: absolute;
+    right: 5px;
+    top: 5px;
 }
 
-.modal-close-icon{
+.modal-close-icon {
     cursor: pointer;
-    font-size: 25px;
+    font-size: var(--icon-size);
     margin-right: 10px;
     margin-top: 5px;
     padding-right: 12px;
@@ -61,21 +65,21 @@
     transition: all 0.4s ease;
 }
 
-.modal-message-icon{
+.modal-message-icon {
     cursor: pointer;
-    font-size: 25px;
+    font-size: var(--icon-size);
     margin-right: 10px;
-    margin-top:5px;
+    margin-top: 5px;
     padding: 10px;
     border-radius: 10%;
     transition: all 0.4s ease;
 }
 
-.modal-close-icon:hover, .modal-message-icon:hover {
+.modal-close-icon:hover,
+.modal-message-icon:hover {
     /* transform: scale(1.2);  */
     background-color: rgb(207, 207, 207);
-} 
-
+}
 
 .modal-title {
     display: flex;
@@ -87,7 +91,7 @@
     gap: 0.3em;
 }
 
-.modal-pet-name{
+.modal-pet-name {
     font-family: "Paytone One";
     font-size: 3em;
     font-weight: bold;
@@ -142,11 +146,11 @@
     border-radius: 100px;
 }
 
-.modal-description{
+.modal-description {
     font-family: "Paytone One";
     padding-left: 10px;
     padding-right: 10px;
-    background: #FFF;
+    background: #fff;
     text-shadow: 2px 2px #e6e6e6;
     font-size: 1.1em;
 }
