--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -49,7 +49,8 @@
     color: var(--navyblue);
 }
 
-.confirm-row, .modal-confirm-row {
+.confirm-row,
+.modal-confirm-row {
     display: flex;
     width: 100%;
     justify-content: space-between;
@@ -89,7 +90,7 @@
     z-index: 1000;
 }
 
-.signout-close-icon{
+.signout-close-icon {
     cursor: pointer;
     font-size: 20px;
     margin-top: 5px;
@@ -101,10 +102,10 @@
     border-radius: 10%;
     transition: all 0.4s ease;
     display: block;
-    float: right;  
+    float: right;
     z-index: 3;
-    position: absolute; 
-    right: 0px; 
+    position: absolute;
+    right: 0px;
     top: 0px;
     color: var(--navyblue);
 }
@@ -112,9 +113,9 @@
 .signout-close-icon:hover {
     /* transform: scale(1.2);  */
     background-color: rgb(207, 207, 207);
-} 
+}
 
-.modal-signout-button{
+.modal-signout-button {
     display: flex;
     justify-content: center;
     align-items: center;
