--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -108,6 +108,7 @@
     letter-spacing: 0.05em;
     border-radius: 5px;
     display: flex;
+    align-items: center;
     word-break: break-word;
 }
 
