--- a/client/src/components/Modal/Modal.css
+++ b/client/src/components/Modal/Modal.css
@@ -5,7 +5,7 @@
     width: 75%;
     height: 75%;
     transform: translate(-50%, -50%);
-    background-color: #fff;
+    background-color: var(--kinda-white);
     padding: 18px;
     z-index: 1000;
     border-radius: 15px;
@@ -117,7 +117,7 @@
     font-family: sans-serif;
     font-weight: bold;
     position: relative;
-    margin-top: 40px;
+    margin: 1em auto;
 }
 
 .modal-description-header:before {
@@ -148,11 +148,13 @@
 
 .modal-description {
     font-family: "Paytone One";
-    padding-left: 10px;
-    padding-right: 10px;
-    background: #fff;
+    background: var(--kinda-white);
     text-shadow: 2px 2px #e6e6e6;
     font-size: 1.1em;
+    padding: 0.5em;
+    font-weight: bold;
+    width: 100%;
+    /* display: flex; */
 }
 
 .modal-pet-description {
@@ -164,4 +166,26 @@
     overflow-y: scroll;
     line-height: 1.6em;
     text-indent: 25px;
+}
+
+.modal-contact {
+    width: 100%;
+}
+
+.modal-contact>div {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.modal-description>div {
+    padding: 0.5em;
+    padding-left: 1em;
+    width: 5em;
+}
+
+.modal-contact>div>span {
+    width: 50%;
+    font-weight: normal;
+    padding-left: 2em;
 }
