--- a/client/src/components/Profile/EditUser.css
+++ b/client/src/components/Profile/EditUser.css
@@ -73,3 +73,11 @@
     width: 100%;
     justify-content: flex-end;
 }
+
+.update-badge {
+    transition: all 0.3s ease-in-out;
+    padding-right: 3em;
+    padding-left: 1em;
+    font-size: 16px;
+    border-left: 0.5em solid green;
+}
