--- a/client/src/components/Profile/Profile.css
+++ b/client/src/components/Profile/Profile.css
@@ -183,8 +183,32 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    overflow: auto;
     padding: 1em;
     border-right: 0.01rem solid var(--kinda-grey);
+}
+
+.post-image-edit-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 1em;
+    height: 100%;
+    width: 40%;
+    border-right: 0.01rem solid var(--kinda-grey);
+}
+
+.post-image-edit-container>img {
+    margin-top: 0.5em;
+    max-width: 80%;
+    max-height: 80%;
+    border-radius: 15px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+}
+
+.post-image-edit-container>input {
+    padding-left: 2em;
 }
 
 .post-image-container>img {
@@ -210,6 +234,7 @@
     width: 100%;
     padding: 0.5em 0;
     justify-content: space-between;
+    position: relative;
 }
 
 #input-description {
@@ -280,6 +305,28 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
+}
+
+.confirmDelete {
+    position: absolute;
+    left: 100%;
+    margin-left: 1.5em;
+}
+
+.confirmDelete>button {
+    width: 5em;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    background-color: var(--kinda-white);
+    transform: uppercase;
+    color: red;
+    padding: 0.5em;
+    font-weight: bold;
+}
+
+.confirmDelete>button:hover {
+    background-color: var(--hover-background);
 }
 
 .post-title>input {
